@@ -18,7 +18,8 @@
     as LoopStatus getter and setter.
 12. When checking if songs are different, compare track and disc numbers too.
 13. Avoid unknown song durations and duplicate updates of MPRIS' song details.
-14. Synchronize update of current song details and status of MPRIS interface.
+14. Synchronize update of current song details and status of MPRIS interface,
+    trigger MPRIS status update when connection to MPD has been lost.
 
 2.4.1
 -----
